--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,23 +2,26 @@
 <header class="header">
   <div class="container">
       <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-2">
               <div class="header__logo">
                   <a href="./index.html"></a>
               </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-7">
               <nav class="header__menu">
                   <ul>
                       <li class="active"><a href="/">Accueil</a></li>
+                      <li class="active"><a href="/public/produits">Produits</a></li>
                       <li><a href="/public/contact">Contacter</a></li>
-                      <li >
+                      <li *ngIf="!isLoggedIn">
                         <a href="/login">Login</a>
                       </li>
-                      <li >
+                      <li *ngIf="!isLoggedIn">
                         <a href="/register">S'inscrire</a>
                       </li>
-                      
+                    <li *ngIf="isLoggedIn">
+                        <a href="#"(click)="signOut()">Déconnecter</a>
+                      </li>
                   </ul>
               </nav>
           </div>
