--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <!-- Brand Logo -->
   <a href="index3.html" class="brand-link">
     <img src="assets/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">Niaye Tech</span>
   </a>
 
   <!-- Sidebar -->
@@ -13,7 +13,7 @@
         <img src="assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
       </div>
       <div class="info">
-        <a href="#" class="d-block">Alexander Pierce</a>
+        <a href="#" class="d-block">{{user.prenom}} {{user.nom}}</a>
       </div>
     </div>
 
@@ -67,13 +67,19 @@
               <p>Livraison</p>
             </a>
           </li>
-     
+          <li class="nav-item">
+            <a href="#" class="nav-link" (click)="signOut()">
+              <i class="far fa-circle nav-icon"></i>
+              <p>Déconnecter</p>
+            </a>
+          </li>
+
         </ul>
       </li>
     </ul>
   </nav>
   <!-- /.sidebar-menu -->
- 
+
   </div>
   <!-- /.sidebar -->
 </aside>
